--- a/LOL Item Sets/Info.plist
+++ b/LOL Item Sets/Info.plist
@@ -27,7 +27,18 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSAppTransportSecurity</key>
-	<dict/>
+	<dict>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>lol-item-sets-generator.org</key>
+			<dict>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2016 melchor629. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
@@ -35,6 +46,6 @@
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 	<key>SUFeedURL</key>
-	<string>https://raw.githubusercontent.com/melchor629/LoL-item-sets-Mac/master/sparkle.xml</string>
+	<string>https://raw.githubusercontent.com/Ilshidur/LoL-item-sets-Mac/master/sparkle.xml</string>
 </dict>
 </plist>
