Start supporting new API
!! This version cannot be used because uses a temporary server and
disables App Transport Security !!

--- a/LOL Item Sets/Info.plist
+++ b/LOL Item Sets/Info.plist
@@ -28,6 +28,8 @@
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>lol-item-sets-generator.org</key>
